--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "mock": "json-server --watch __json_server_mock/db.json --port 3001"
     },
     "lint-staged": {
         "*.{js,ts,tsx}": "prettier --write"
@@ -36,6 +37,7 @@
         "@commitlint/config-conventional": "^16.2.1",
         "eslint-config-prettier": "^8.5.0",
         "husky": "^7.0.4",
+        "json-server": "^0.17.0",
         "lint-staged": "^12.3.7",
         "prettier": "2.6.2"
     },
@@ -47,6 +49,7 @@
         "@types/node": "^16.11.26",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
+        "qs": "^6.10.3",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-scripts": "5.0.0",
