--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "prepare": "husky install",
-        "mock": "json-server --watch __json_server_mock/db.json --port 3001"
+        "mock": "json-server --watch __json_server_mock/db.json --port 3001 --middlewares __json_server_mock/middlewares.js"
     },
     "lint-staged": {
         "*.{js,ts,tsx}": "prettier --write"
